Renamed and modified files. Major changes: - modified the data prep script for use within quarto docs - Added a temp data prep script for testing code outside of Quarto - Refined the upcast/downcast script - Added and refined a temporary quarto doc for the upcast/downcast test. Will eventually be added to the main Offshore_CTD.qmd file.

--- a/Scripts/Offshore_CTD_QC.qmd
+++ b/Scripts/Offshore_CTD_QC.qmd
@@ -47,7 +47,7 @@ dl_new_discrete <- "n"
 #| collapse: true
 
 library(here)
-source(here("scripts", "Offshore_CTD_1_DataPrep.R"))
+source(here("scripts", "Offshore_CTD_DataPrep.R"))
 ```
 
 ## 2. Gross Range Test
